# chepochem

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/chepochem/: __init__.py  metadata.py
src/chepochem/adapters/code_navigation/: code_navigation.py
src/chepochem/adapters/code_navigation/python/: jedi_code_navigation.py
src/chepochem/models/: code_part.py  position.py
src/chepochem/python/: __init__.py
src/langchain_code_loader/: __init__.py
tests/: __init__.py  test_langchain_code_loader.py  test_python_document_loader.py
