[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_code_loader"
version = "0.1.0"
description = "Package for uploading project code to RAG system on Langchain."
readme = "README.rst"
authors = [
  {name = "Kirill Gladkikh", email = "boombarah@gmail.com"}
]
maintainers = [
  {name = "Kirill Gladkikh", email = "boombarah@gmail.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/vodkar/langchain_code_loader/issues"
changelog = "https://github.com/vodkar/langchain_code_loader/blob/master/changelog.md"
homepage = "https://github.com/vodkar/langchain_code_loader"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

