[project]
name = "chepochem"
version = "0.1.0"
description = "Package for uploading project code."
readme = "README.rst"
authors = [{ name = "Kirill Gladkikh", email = "boombarah@gmail.com" }]
maintainers = [{ name = "Kirill Gladkikh", email = "boombarah@gmail.com" }]
classifiers = []
license = { text = "BSD license" }
dependencies = []

[tool.poetry]
name = "chepochem"
version = "0.1.0"
description = ""
authors = ["vodkar <boombarah@gmail.com>"]
license = "BSD"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.1"
attr = "^0.3.2"
jedi = "^0.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
dev = [
  "coverage", # testing
  "mypy",     # linting
  "pytest",   # testing
  "ruff",     # linting
]

[project.urls]

bugs = "https://github.com/vodkar/chepochem/issues"
changelog = "https://github.com/vodkar/chepochem/blob/master/changelog.md"
homepage = "https://github.com/vodkar/chepochem"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
